add file ListFileVideo

--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,10 @@
 }
 
 @layer base {
-  body {
+ /*  body {
     background-color: hsl(var(--background));
     color: hsl(var(--foreground));
-  }
+  } */
 }
 
 * {
